<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.existmg.module_user.viewmodel.UserRemindOptimizationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <include
            android:id="@+id/user_optimization_toolbar"
            layout="@layout/ui_layout_base_toolbar"/>
        <!--开启通知权限-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/user_optimization_cl_notification"
            android:layout_width="match_parent"
            android:layout_height="@dimen/ui_dp_80"
            android:background="@drawable/ui_shape_rounded_rectangle_background_green_light"
            android:layout_margin="@dimen/ui_dp_20"
            app:layout_constraintTop_toBottomOf="@id/user_optimization_toolbar">

            <ImageView
                android:id="@+id/user_optimization_iv_notification_icon"
                android:src="@drawable/ui_remind"
                android:layout_width="@dimen/ui_dp_50"
                android:layout_height="@dimen/ui_dp_50"
                android:padding="@dimen/ui_dp_10"
                android:layout_marginStart="@dimen/ui_dp_10"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/user_optimization_tv_notification_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_optimization_notification_content_string"
                android:textSize="@dimen/ui_sp_16"
                android:textColor="@color/ui_black"
                android:layout_marginStart="@dimen/ui_dp_10"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/user_optimization_iv_notification_icon"/>

            <ImageView
                android:id="@+id/user_optimization_iv_notification_turn_right"
                android:layout_width="@dimen/ui_dp_20"
                android:layout_height="@dimen/ui_dp_50"
                android:src="@drawable/ui_main_guide_turn_right"
                android:layout_marginEnd="@dimen/ui_dp_10"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/user_optimization_tv_notification_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_optimization_notification_switch_close_string"
                android:textColor="@color/ui_green"
                android:textSize="@dimen/ui_sp_12"
                android:layout_marginEnd="@dimen/ui_dp_10"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/user_optimization_iv_notification_turn_right"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--允许应用自启动-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/user_optimization_cl_self_start"
            android:layout_width="match_parent"
            android:layout_height="@dimen/ui_dp_80"
            android:background="@drawable/ui_shape_rounded_rectangle_background_green_light"
            android:layout_margin="@dimen/ui_dp_20"
            app:layout_constraintTop_toBottomOf="@id/user_optimization_cl_notification">

            <ImageView
                android:id="@+id/user_optimization_iv_self_start_icon"
                android:src="@drawable/ui_self_start"
                android:layout_width="@dimen/ui_dp_50"
                android:layout_height="@dimen/ui_dp_50"
                android:padding="@dimen/ui_dp_10"
                android:layout_marginStart="@dimen/ui_dp_10"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/user_optimization_tv_self_start_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_optimization_self_start_content_string"
                android:textSize="@dimen/ui_sp_16"
                android:textColor="@color/ui_black"
                android:layout_marginStart="@dimen/ui_dp_10"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/user_optimization_iv_self_start_icon"/>

            <ImageView
                android:id="@+id/user_optimization_iv_self_start_turn_right"
                android:layout_width="@dimen/ui_dp_20"
                android:layout_height="@dimen/ui_dp_50"
                android:src="@drawable/ui_main_guide_turn_right"
                android:layout_marginEnd="@dimen/ui_dp_10"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:visibility="gone"
                android:id="@+id/user_optimization_tv_self_start_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_optimization_self_start_switch_close_string"
                android:textColor="@color/ui_green"
                android:textSize="@dimen/ui_sp_12"
                android:layout_marginEnd="@dimen/ui_dp_10"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/user_optimization_iv_self_start_turn_right"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>